@@ -14,6 +14,11 @@ hw-detect (1.65) UNRELEASED; urgency=low
     initialization to finish before proceeding with the installation and add
     the 'rootdelay' boot parameter for the target system. Closes: #486298.
 
+  [ Joey Hess ]
+  * ethdetect: Some modules do not request firmware until their interface
+    has been brought up. So up and down every interface so missing firmware
+    can be detected. Closes: #491712
+
  -- Frans Pop <fjp@debian.org>  Wed, 23 Jul 2008 19:54:37 +0200
 
 hw-detect (1.64) unstable; urgency=low
